Feature-Resource Allocation